@@ -17,10 +17,11 @@
 package com.chiralbehaviors.layout.explorer;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
+import java.util.Objects;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 import jakarta.ws.rs.client.ClientBuilder;
 import jakarta.ws.rs.client.WebTarget;
@@ -37,6 +38,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 
+import javafx.application.Platform;
 import javafx.concurrent.Worker.State;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
@@ -51,13 +53,32 @@ import netscape.javascript.JSObject;
 
 public class AutoLayoutController {
     public class ActiveState extends QueryState {
+        private final ExecutorService executor = Executors.newSingleThreadExecutor(r -> {
+            Thread t = new Thread(r, "graphql-fetch");
+            t.setDaemon(true);
+            return t;
+        });
+
         public ActiveState() {
             super();
         }
 
-        public String fetch(String query) throws IOException {
-            setData(GraphQlUtil.evaluate(endpoint, query));
-            return getData();
+        public void fetchAsync(String query) {
+            executor.submit(() -> {
+                String result;
+                try {
+                    result = GraphQlUtil.evaluate(endpoint, query);
+                } catch (Exception e) {
+                    log.error("GraphQL fetch failed", e);
+                    result = "{}";
+                }
+                final String finalResult = result;
+                Platform.runLater(() -> {
+                    setData(finalResult);
+                    JSObject window = (JSObject) webEngine.executeScript("window");
+                    window.call("onFetchComplete", finalResult);
+                });
+            });
         }
 
         @Override
@@ -73,9 +94,9 @@ public class AutoLayoutController {
             if (targetURL != null && !targetURL.equals(previous)) {
                 URI uri;
                 try {
-                    uri = new URL(targetURL).toURI();
-                } catch (MalformedURLException | URISyntaxException e) {
-                    e.printStackTrace();
+                    uri = new URI(targetURL);
+                } catch (URISyntaxException e) {
+                    log.error("Invalid target URL: {}", targetURL, e);
                     return;
                 }
                 endpoint = ClientBuilder.newClient()
@@ -93,6 +114,7 @@ public class AutoLayoutController {
     private AnchorPane          anchor;
     private WebTarget           endpoint;
     private AutoLayout          layout;
+    private WebEngine           webEngine;
     @FXML
     private ToggleGroup         page;
     private QueryState          queryState;
@@ -162,7 +184,7 @@ public class AutoLayoutController {
             return;
         }
         queryState = state;
-        if (previousDataString == state.getData()) {
+        if (Objects.equals(previousDataString, state.getData())) {
             return;
         }
         JsonNode data;
@@ -195,6 +217,7 @@ public class AutoLayoutController {
         AnchorPane.setRightAnchor(graphiql, 0.0);
         GraphiqlController controller = loader.getController();
         WebEngine engine = controller.webview.getEngine();
+        webEngine = engine;
         engine.getLoadWorker()
               .stateProperty()
               .addListener((o, oldState, newState) -> {
